# sudoku-solver

./: Cargo.toml
boards/: a-mag_4-star_2024_4_12.txt  a-mag_5-star_2024_4_19.txt  romsdalen.txt  test_3x3.txt
src/: board.rs  board_index_math.rs  board_is_valid.rs  board_size.rs  board_transformations.rs  main.rs  number_set.rs  number_set_tests.rs  solver.rs
