[package]
name = "sudoku-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
itertools = "0.12.1"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25.3"
